correct ijclr2025 notebooks

--- a/tests/evaluations/ijclr2025/evaluation_random_rules.ipynb
+++ b/tests/evaluations/ijclr2025/evaluation_random_rules.ipynb
@@ -99,7 +99,7 @@
     "    while len(body) < nb_conditions:\n",
     "        var_id = random.randint(0, len(features)-1)\n",
     "        val = random.choice(features[var_id][1])\n",
-    "        atom = LegacyAtom(variable=features[var_id][0], domain=features[var_id][1], value=val, state_position=var_id)\n",
+    "        atom = LegacyAtom(variable=features[var_id][0], domain=set(features[var_id][1]), value=val, state_position=var_id)\n",
     "        valid = True\n",
     "        for var in body:\n",
     "            if body[var].state_position == atom.state_position:\n",
@@ -117,7 +117,7 @@
     "    nb_conditions = random.randint(1,max_body_size)\n",
     "    while len(body) < nb_conditions:\n",
     "        var_id = random.randint(0, len(feature_state)-1)\n",
-    "        atom = LegacyAtom(variable=features[var_id][0], domain=features[var_id][1], value=feature_state[var_id], state_position=var_id)\n",
+    "        atom = LegacyAtom(variable=features[var_id][0], domain=set(features[var_id][1]), value=feature_state[var_id], state_position=var_id)\n",
     "        valid = True\n",
     "        for var in body:\n",
     "            if body[var].state_position == atom.state_position:\n",
@@ -142,7 +142,7 @@
    "id": "52ca21c2",
    "metadata": {},
    "source": [
-    "# Compute counterfactual with bruteforce and proposal"
+    "# Compute counterfactual with proposal"
    ]
   },
   {
@@ -201,7 +201,7 @@
     "        rules = []\n",
     "        for val in target_domain:\n",
     "            val_rules = []\n",
-    "            head = LegacyAtom(variable=target, domain=target_domain, value=val, state_position=0)\n",
+    "            head = LegacyAtom(variable=target, domain=set(target_domain), value=val, state_position=0)\n",
     "\n",
     "            loops = 0\n",
     "            while(len(val_rules) < nb_rules and loops < MAX_LOOP):\n",
@@ -278,8 +278,7 @@
    "source": [
     "df[df[\"nb_solutions\"]>0]\n",
     "\n",
-    "\n",
-    "df.to_csv(\"eval_boolean_network.csv\")"
+    "df.to_csv(\"results_random_rules.csv\")"
    ]
   },
   {
