--- a/tests/evaluations/ijclr2025/evaluation_benchmarks.ipynb
+++ b/tests/evaluations/ijclr2025/evaluation_benchmarks.ipynb
@@ -168,7 +168,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[df[\"nb_solutions\"]>0]"
+    "df[df[\"nb_solutions\"]>0]\n",
+    "\n",
+    "df.to_csv(\"results_benchmarks.csv\")"
    ]
   },
   {
