--- a/tests/evaluations/ijclr2025/examples.ipynb
+++ b/tests/evaluations/ijclr2025/examples.ipynb
@@ -130,7 +130,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pylfit-dev",
+   "display_name": "pylfit-release",
    "language": "python",
    "name": "python3"
   },
@@ -144,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.13.4"
   },
   "papermill": {
    "default_parameters": {},
